--- a/changelog/index.html
+++ b/changelog/index.html
@@ -522,8 +522,13 @@
 
 <h1 id="release-notes">Release Notes</h1>
 <hr />
-<h1 id="030-2025-08-01"><a href="https://github.com/osl-incubator/doxs/compare/0.2.0...0.3.0">0.3.0</a> (2025-08-01)</h1>
+<h1 id="040-2025-08-01"><a href="https://github.com/osl-incubator/doxs/compare/0.3.0...0.4.0">0.4.0</a> (2025-08-01)</h1>
 <h3 id="features">Features</h3>
+<ul>
+<li>Add initial schema validation (<a href="https://github.com/osl-incubator/doxs/issues/7">#7</a>) (<a href="https://github.com/osl-incubator/doxs/commit/a64714264bec158fdbb8395a66532fbcf8c6f458">a647142</a>)</li>
+</ul>
+<h1 id="030-2025-08-01"><a href="https://github.com/osl-incubator/doxs/compare/0.2.0...0.3.0">0.3.0</a> (2025-08-01)</h1>
+<h3 id="features_1">Features</h3>
 <ul>
 <li>Replace homemade Annotation by typing.Annotated (<a href="https://github.com/osl-incubator/doxs/issues/6">#6</a>) (<a href="https://github.com/osl-incubator/doxs/commit/f098bab285039104e33618844058e2f571534a13">f098bab</a>)</li>
 </ul>
@@ -533,7 +538,7 @@
 <li>Add missing changes (<a href="https://github.com/osl-incubator/doxs/issues/2">#2</a>) (<a href="https://github.com/osl-incubator/doxs/commit/8a108509297a4ff4488529c96012875e975c2a8a">8a10850</a>)</li>
 <li>Fix semantic release configuration (<a href="https://github.com/osl-incubator/doxs/issues/5">#5</a>) (<a href="https://github.com/osl-incubator/doxs/commit/c25eeefbb94b4931f1bcd99cd9ddb2c97919e559">c25eeef</a>)</li>
 </ul>
-<h3 id="features_1">Features</h3>
+<h3 id="features_2">Features</h3>
 <ul>
 <li>Add support for docstring in yaml format (<a href="https://github.com/osl-incubator/doxs/issues/4">#4</a>) (<a href="https://github.com/osl-incubator/doxs/commit/d9cbd9a731975c82e7842c8f03bbf1373a269ba3">d9cbd9a</a>)</li>
 </ul>
